--- a/README.adoc
+++ b/README.adoc
@@ -54,7 +54,7 @@ Try to build the project locally using https://github.com/ammbra/visitor/blob/de
 Build the image with:
 [source, bash, subs="normal,attributes"]
 ----
-$ docker run -d -p 5000:5000 --restart=always --name registry registry:2docker run -d -p 5000:5000 --restart=always --name registry registry:2
+$ docker run -d -p 5000:5000 --restart=always --name registry registry:2
 $ docker build -t springboot/visitor:1.0 .
 $ docker tag springboot/visitor:1.0 localhost:5000/springboot/visitor:1.0
 $ docker push localhost:5000/springboot/visitor:1.0
