--- a/README.adoc
+++ b/README.adoc
@@ -1,9 +1,9 @@
 = Hybrid chart approach with validation in Openshift
 
 * <<preparation , Preparation>>
-** <<create-the-docker-image-for-visitor-microservice, Create the Docker image for Visitor Microservice>>
+** <<working-locally-with-the-docker-image-for-visitor-microservice, Create the Docker image for Visitor Microservice>>
 * <<install-leader-chart-for-landmark-microservice, Install leader chart for Landmark microservice >>
-** <<create-the-docker-image-for-landmark-microservice,Create the Docker image for Landmark Microservice>>
+** <<working-locally-with-the-docker-image-for-landmark-microservice,Create the Docker image for Landmark Microservice>>
 ** <<leader-helm-chart-installation, Leader Helm chart installation>>
 * <<install-helm-chart-for-visitor-microservice, Install Helm chart for Visitor microservice>>
 * <<compatibility,Compatibility>>
@@ -46,7 +46,7 @@ If the repo is not there, please run the following set of commands:
 $ helm repo add bitnami https://charts.bitnami.com/bitnami
 ----
 
-==== Create the Docker image for Visitor Microservice
+==== Working locally with the Docker image for Visitor Microservice
 Clone the repository https://github.com/ammbra/visitor[https://github.com/ammbra/visitor]:
 [source, bash, subs="normal,attributes"]
 ----
@@ -71,7 +71,7 @@ IMPORTANT: If you already have the Docker image for Landmark Microservice and/or
 skip these steps and just install the <<install-helm-chart-for-visitor-microservice, visitor charts >>.
 
 
-==== Create the Docker image for Landmark Microservice
+==== Working locally with the Docker image for Landmark Microservice
 
 Clone the repository https://github.com/ammbra/landmark[https://github.com/ammbra/landmark].
 [source, bash, subs="normal,attributes"]
