--- a/README.adoc
+++ b/README.adoc
@@ -1,9 +1,9 @@
 = Hybrid chart approach with Helm Charts in Openshift
 
 * <<preparation , Preparation>>
-** <<create-the-docker-image-for-visitor-microservice, Create the Docker image for Visitor Microservice>>
+** <<working-locally-with-the-docker-image-for-visitor-microservice, Working locally with the Docker image for Visitor Microservice>>
 * <<install-leader-chart-for-landmark_microservice, Install leader chart for Landmark microservice >>
-** <<create-the-docker-image-for-landmark-microservice,Create the Docker image for Landmark Microservice>>
+** <<working-locally-with-the-docker-image-for-landmark-microservice, Working locally with the Docker image for Landmark Microservice>>
 ** <<leader-helm-chart-installation, Leader Helm chart installation>>
 * <<install-helm-chart-for-visitor-microservice, Install Helm chart for Visitor microservice>>
 * <<solution-and-more, Solution and more>>
@@ -47,7 +47,7 @@ If the repo is not there, please run the following set of commands:
 $ helm repo add bitnami https://charts.bitnami.com/bitnami
 ----
 
-==== Create the Docker image for Visitor Microservice
+==== Working locally with the Docker image for Visitor Microservice
 Clone the repository https://github.com/ammbra/visitor[https://github.com/ammbra/visitor].
 Try to build the project locally using https://github.com/ammbra/visitor/blob/develop/Run-Visitor-Microservice.adoc[Run-Landmark-Microservice.adoc].
 
@@ -74,7 +74,7 @@ $ git pull
 **NOTE: Do the bellow steps only if you do not have the landmark Docker image created yet.
 **
 
-==== Create the Docker image for Landmark Microservice
+==== Working locally with the Docker image for Landmark Microservice
 Clone the repository https://github.com/ammbra/landmark[https://github.com/ammbra/landmark].
 Try to build the project locally using https://github.com/ammbra/landmark/Run-Landmark-Microservice.adoc[Run-Landmark-Microservice.adoc].
 
