--- a/README.adoc
+++ b/README.adoc
@@ -49,7 +49,7 @@ $ helm repo add bitnami https://charts.bitnami.com/bitnami
 ----
 
 ==== Working locally with the Docker image for Visitor Microservice
-Clone the repository https://github.com/ammbra/visitor[https://github.com/ammbra/visitor]:
+Clone the repository {home}/visitor:
 [source, bash, subs="normal,attributes"]
 ----
 $ git clone {home}/visitor.git
@@ -78,7 +78,7 @@ skip these steps and just install the <<install-helm-chart-for-visitor-microserv
 Clone the repository {home}/landmark.
 [source, bash, subs="normal,attributes"]
 ----
-$ git clone https://github.com/ammbra/landmark.git
+$ git clone {home}/landmark.git
 $ git checkout -b validation/leader-chart-lab
 $ git pull
 ----
